[gd_scene load_steps=7 format=3 uid="uid://cy8mhrvicwm25"]

[ext_resource type="Theme" uid="uid://xtw2il5ua0g5" path="res://resources/themes/panel_theme.tres" id="1_1bqnc"]
[ext_resource type="Script" path="res://scripts/ui/unit_info.gd" id="1_joia0"]
[ext_resource type="Texture2D" uid="uid://dtuvpu0ftqv3a" path="res://img/ui/icons.png" id="2_fvuhv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ko3tk"]
resource_local_to_scene = true
atlas = ExtResource("2_fvuhv")
region = Rect2(3.24155, 34.2152, 27.7964, 28.3909)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nlic"]
resource_local_to_scene = true
atlas = ExtResource("2_fvuhv")
region = Rect2(33.3714, 191.68, 29.3799, 30.9034)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ptr2"]
resource_local_to_scene = true
atlas = ExtResource("2_fvuhv")
region = Rect2(33.5672, 163.986, 27.0532, 25.864)

[node name="UnitInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_1bqnc")
script = ExtResource("1_joia0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -80.0
offset_right = -25.0
offset_bottom = 80.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="LabelName" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Unit"

[node name="HBoxHealth" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxHealth"]
layout_mode = 2
texture = SubResource("AtlasTexture_ko3tk")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxHealth"]
layout_mode = 2
size_flags_horizontal = 4
text = "100"

[node name="HBoxDefense" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxDefense"]
layout_mode = 2
texture = SubResource("AtlasTexture_7nlic")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxDefense"]
layout_mode = 2
size_flags_horizontal = 4
text = "100"

[node name="HBoxAttack" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxAttack"]
layout_mode = 2
texture = SubResource("AtlasTexture_3ptr2")

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxAttack"]
layout_mode = 2
size_flags_horizontal = 4
text = "100"
